PJ2-943: Quick alignment fix

--- a/app/design/frontend/peterjacksons/petertheme/web/css/modules/cms/_home.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/modules/cms/_home.scss
@@ -196,6 +196,7 @@ body[class~='cms-home'] {
         flex: 0 0 auto;
         font-family: "sofia-pro", sans-serif;
         font-weight: 500;
+        text-align: left;
 
         @media all and (max-width: $xs-breakpoint) {
             font-size: 13px;
